// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`select_views.sql > line 8 1`] = `
[
  "SELECT name, #thepath FROM iexit ORDER BY name COLLATE "C", 2",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 27,
                  "relname": "iexit",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "CollateClause": {
                      "arg": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "name",
                              },
                            },
                          ],
                          "location": 42,
                        },
                      },
                      "collname": [
                        {
                          "String": {
                            "sval": "C",
                          },
                        },
                      ],
                      "location": 47,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "A_Const": {
                      "ival": {
                        "ival": 2,
                      },
                      "location": 60,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "name",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 13,
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "location": 13,
                      "name": [
                        {
                          "String": {
                            "sval": "#",
                          },
                        },
                      ],
                      "rexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "thepath",
                              },
                            },
                          ],
                          "location": 14,
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_views.sql > line 10 1`] = `
[
  "SELECT * FROM toyemp WHERE name = 'sharon'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "toyemp",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "name",
                        },
                      },
                    ],
                    "location": 27,
                  },
                },
                "location": 32,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 34,
                    "sval": {
                      "sval": "sharon",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_views.sql > line 15 1`] = `
[
  "CREATE ROLE regress_alice",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "role": "regress_alice",
            "stmt_type": "ROLESTMT_ROLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_views.sql > line 17 1`] = `
[
  "CREATE FUNCTION f_leak (text)
       RETURNS bool LANGUAGE 'plpgsql' COST 0.0000001
       AS 'BEGIN RAISE NOTICE ''f_leak => %'', $1; RETURN true; END'",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "f_leak",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "plpgsql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 50,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "Float": {
                      "fval": "0.0000001",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "cost",
                  "location": 69,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "BEGIN RAISE NOTICE 'f_leak => %', $1; RETURN true; END",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 91,
                },
              },
            ],
            "parameters": [
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 24,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_DEFAULT",
                },
              },
            ],
            "returnType": {
              "location": 45,
              "names": [
                {
                  "String": {
                    "sval": "bool",
                  },
                },
              ],
              "typemod": -1,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_views.sql > line 21 1`] = `
[
  "CREATE TABLE customer (
       cid      int primary key,
       name     text not null,
       tel      text,
       passwd	text
)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "customer",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "cid",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_PRIMARY",
                        "location": 44,
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 31,
                  "typeName": {
                    "location": 40,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "name",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_NOTNULL",
                        "location": 78,
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 64,
                  "typeName": {
                    "location": 73,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "tel",
                  "is_local": true,
                  "location": 95,
                  "typeName": {
                    "location": 104,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "passwd",
                  "is_local": true,
                  "location": 117,
                  "typeName": {
                    "location": 124,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_views.sql > line 28 1`] = `
[
  "CREATE TABLE credit_card (
       cid      int references customer(cid),
       cnum     text,
       climit   int
)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "credit_card",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "cid",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_FOREIGN",
                        "fk_del_action": "a",
                        "fk_matchtype": "s",
                        "fk_upd_action": "a",
                        "initially_valid": true,
                        "location": 47,
                        "pk_attrs": [
                          {
                            "String": {
                              "sval": "cid",
                            },
                          },
                        ],
                        "pktable": {
                          "inh": true,
                          "location": 58,
                          "relname": "customer",
                          "relpersistence": "p",
                        },
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 34,
                  "typeName": {
                    "location": 43,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "cnum",
                  "is_local": true,
                  "location": 80,
                  "typeName": {
                    "location": 89,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "climit",
                  "is_local": true,
                  "location": 102,
                  "typeName": {
                    "location": 111,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_views.sql > line 34 1`] = `
[
  "CREATE TABLE credit_usage (
       cid      int references customer(cid),
       ymd      date,
       usage    int
)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "credit_usage",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "cid",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_FOREIGN",
                        "fk_del_action": "a",
                        "fk_matchtype": "s",
                        "fk_upd_action": "a",
                        "initially_valid": true,
                        "location": 48,
                        "pk_attrs": [
                          {
                            "String": {
                              "sval": "cid",
                            },
                          },
                        ],
                        "pktable": {
                          "inh": true,
                          "location": 59,
                          "relname": "customer",
                          "relpersistence": "p",
                        },
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 35,
                  "typeName": {
                    "location": 44,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "ymd",
                  "is_local": true,
                  "location": 81,
                  "typeName": {
                    "location": 90,
                    "names": [
                      {
                        "String": {
                          "sval": "date",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "usage",
                  "is_local": true,
                  "location": 103,
                  "typeName": {
                    "location": 112,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_views.sql > line 40 1`] = `
[
  "INSERT INTO customer
       VALUES (101, 'regress_alice', '+81-12-3456-7890', 'passwd123'),
              (102, 'regress_bob',   '+01-234-567-8901', 'beafsteak'),
              (103, 'regress_eve',   '+49-8765-43210',   'hamburger')",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "customer",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 101,
                            },
                            "location": 36,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 41,
                            "sval": {
                              "sval": "regress_alice",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 58,
                            "sval": {
                              "sval": "+81-12-3456-7890",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 78,
                            "sval": {
                              "sval": "passwd123",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 102,
                            },
                            "location": 107,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 112,
                            "sval": {
                              "sval": "regress_bob",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 129,
                            "sval": {
                              "sval": "+01-234-567-8901",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 149,
                            "sval": {
                              "sval": "beafsteak",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 103,
                            },
                            "location": 178,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 183,
                            "sval": {
                              "sval": "regress_eve",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 200,
                            "sval": {
                              "sval": "+49-8765-43210",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 220,
                            "sval": {
                              "sval": "hamburger",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_views.sql > line 45 1`] = `
[
  "       VALUES (101, '1111-2222-3333-4444', 4000),
              (102, '5555-6666-7777-8888', 3000),
              (103, '9801-2345-6789-0123', 2000)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "valuesLists": [
              {
                "List": {
                  "items": [
                    {
                      "A_Const": {
                        "ival": {
                          "ival": 101,
                        },
                        "location": 15,
                      },
                    },
                    {
                      "A_Const": {
                        "location": 20,
                        "sval": {
                          "sval": "1111-2222-3333-4444",
                        },
                      },
                    },
                    {
                      "A_Const": {
                        "ival": {
                          "ival": 4000,
                        },
                        "location": 43,
                      },
                    },
                  ],
                },
              },
              {
                "List": {
                  "items": [
                    {
                      "A_Const": {
                        "ival": {
                          "ival": 102,
                        },
                        "location": 65,
                      },
                    },
                    {
                      "A_Const": {
                        "location": 70,
                        "sval": {
                          "sval": "5555-6666-7777-8888",
                        },
                      },
                    },
                    {
                      "A_Const": {
                        "ival": {
                          "ival": 3000,
                        },
                        "location": 93,
                      },
                    },
                  ],
                },
              },
              {
                "List": {
                  "items": [
                    {
                      "A_Const": {
                        "ival": {
                          "ival": 103,
                        },
                        "location": 115,
                      },
                    },
                    {
                      "A_Const": {
                        "location": 120,
                        "sval": {
                          "sval": "9801-2345-6789-0123",
                        },
                      },
                    },
                    {
                      "A_Const": {
                        "ival": {
                          "ival": 2000,
                        },
                        "location": 143,
                      },
                    },
                  ],
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_views.sql > line 59 1`] = `
[
  "CREATE VIEW my_property_normal AS
       SELECT * FROM customer WHERE name = current_user",
  {
    "stmts": [
      {
        "stmt": {
          "ViewStmt": {
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 55,
                      "relname": "customer",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 48,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 48,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "name",
                            },
                          },
                        ],
                        "location": 70,
                      },
                    },
                    "location": 75,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "SQLValueFunction": {
                        "location": 77,
                        "op": "SVFOP_CURRENT_USER",
                        "typmod": -1,
                      },
                    },
                  },
                },
              },
            },
            "view": {
              "inh": true,
              "location": 12,
              "relname": "my_property_normal",
              "relpersistence": "p",
            },
            "withCheckOption": "NO_CHECK_OPTION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_views.sql > line 62 1`] = `
[
  "       SELECT * FROM customer WHERE name = current_user",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 21,
                  "relname": "customer",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 14,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 14,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "name",
                        },
                      },
                    ],
                    "location": 36,
                  },
                },
                "location": 41,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "SQLValueFunction": {
                    "location": 43,
                    "op": "SVFOP_CURRENT_USER",
                    "typmod": -1,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_views.sql > line 64 1`] = `
[
  "CREATE VIEW my_credit_card_normal AS
       SELECT * FROM customer l NATURAL JOIN credit_card r
       WHERE l.name = current_user",
  {
    "stmts": [
      {
        "stmt": {
          "ViewStmt": {
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "JoinExpr": {
                      "isNatural": true,
                      "jointype": "JOIN_INNER",
                      "larg": {
                        "RangeVar": {
                          "alias": {
                            "aliasname": "l",
                          },
                          "inh": true,
                          "location": 58,
                          "relname": "customer",
                          "relpersistence": "p",
                        },
                      },
                      "rarg": {
                        "RangeVar": {
                          "alias": {
                            "aliasname": "r",
                          },
                          "inh": true,
                          "location": 82,
                          "relname": "credit_card",
                          "relpersistence": "p",
                        },
                      },
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 51,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 51,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "l",
                            },
                          },
                          {
                            "String": {
                              "sval": "name",
                            },
                          },
                        ],
                        "location": 109,
                      },
                    },
                    "location": 116,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "SQLValueFunction": {
                        "location": 118,
                        "op": "SVFOP_CURRENT_USER",
                        "typmod": -1,
                      },
                    },
                  },
                },
              },
            },
            "view": {
              "inh": true,
              "location": 12,
              "relname": "my_credit_card_normal",
              "relpersistence": "p",
            },
            "withCheckOption": "NO_CHECK_OPTION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_views.sql > line 68 1`] = `
[
  "       SELECT * FROM customer l NATURAL JOIN credit_card r
       WHERE l.name = current_user",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "JoinExpr": {
                  "isNatural": true,
                  "jointype": "JOIN_INNER",
                  "larg": {
                    "RangeVar": {
                      "alias": {
                        "aliasname": "l",
                      },
                      "inh": true,
                      "location": 21,
                      "relname": "customer",
                      "relpersistence": "p",
                    },
                  },
                  "rarg": {
                    "RangeVar": {
                      "alias": {
                        "aliasname": "r",
                      },
                      "inh": true,
                      "location": 45,
                      "relname": "credit_card",
                      "relpersistence": "p",
                    },
                  },
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 14,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 14,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "l",
                        },
                      },
                      {
                        "String": {
                          "sval": "name",
                        },
                      },
                    ],
                    "location": 72,
                  },
                },
                "location": 79,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "SQLValueFunction": {
                    "location": 81,
                    "op": "SVFOP_CURRENT_USER",
                    "typmod": -1,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_views.sql > line 71 1`] = `
[
  "CREATE VIEW my_credit_card_usage_normal AS
       SELECT * FROM my_credit_card_secure l NATURAL JOIN credit_usage r",
  {
    "stmts": [
      {
        "stmt": {
          "ViewStmt": {
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "JoinExpr": {
                      "isNatural": true,
                      "jointype": "JOIN_INNER",
                      "larg": {
                        "RangeVar": {
                          "alias": {
                            "aliasname": "l",
                          },
                          "inh": true,
                          "location": 64,
                          "relname": "my_credit_card_secure",
                          "relpersistence": "p",
                        },
                      },
                      "rarg": {
                        "RangeVar": {
                          "alias": {
                            "aliasname": "r",
                          },
                          "inh": true,
                          "location": 101,
                          "relname": "credit_usage",
                          "relpersistence": "p",
                        },
                      },
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 57,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 57,
                        },
                      },
                    },
                  },
                ],
              },
            },
            "view": {
              "inh": true,
              "location": 12,
              "relname": "my_credit_card_usage_normal",
              "relpersistence": "p",
            },
            "withCheckOption": "NO_CHECK_OPTION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_views.sql > line 74 1`] = `
[
  "       SELECT * FROM my_credit_card_secure l NATURAL JOIN credit_usage r",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "JoinExpr": {
                  "isNatural": true,
                  "jointype": "JOIN_INNER",
                  "larg": {
                    "RangeVar": {
                      "alias": {
                        "aliasname": "l",
                      },
                      "inh": true,
                      "location": 21,
                      "relname": "my_credit_card_secure",
                      "relpersistence": "p",
                    },
                  },
                  "rarg": {
                    "RangeVar": {
                      "alias": {
                        "aliasname": "r",
                      },
                      "inh": true,
                      "location": 58,
                      "relname": "credit_usage",
                      "relpersistence": "p",
                    },
                  },
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 14,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 14,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_views.sql > line 76 1`] = `
[
  "GRANT SELECT ON my_property_normal TO public",
  {
    "stmts": [
      {
        "stmt": {
          "GrantStmt": {
            "behavior": "DROP_RESTRICT",
            "grantees": [
              {
                "RoleSpec": {
                  "location": 38,
                  "roletype": "ROLESPEC_PUBLIC",
                },
              },
            ],
            "is_grant": true,
            "objects": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 16,
                  "relname": "my_property_normal",
                  "relpersistence": "p",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "privileges": [
              {
                "AccessPriv": {
                  "priv_name": "select",
                },
              },
            ],
            "targtype": "ACL_TARGET_OBJECT",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_views.sql > line 86 1`] = `
[
  "SET SESSION AUTHORIZATION regress_alice",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 26,
                  "sval": {
                    "sval": "regress_alice",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "session_authorization",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_views.sql > line 92 1`] = `
[
  "SELECT * FROM my_property_normal WHERE f_leak(passwd)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "my_property_normal",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "FuncCall": {
                "args": [
                  {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "passwd",
                          },
                        },
                      ],
                      "location": 46,
                    },
                  },
                ],
                "funcformat": "COERCE_EXPLICIT_CALL",
                "funcname": [
                  {
                    "String": {
                      "sval": "f_leak",
                    },
                  },
                ],
                "location": 39,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_views.sql > line 95 1`] = `
[
  "SELECT * FROM my_property_secure WHERE f_leak(passwd)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "my_property_secure",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "FuncCall": {
                "args": [
                  {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "passwd",
                          },
                        },
                      ],
                      "location": 46,
                    },
                  },
                ],
                "funcformat": "COERCE_EXPLICIT_CALL",
                "funcname": [
                  {
                    "String": {
                      "sval": "f_leak",
                    },
                  },
                ],
                "location": 39,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_views.sql > line 102 1`] = `
[
  "SELECT * FROM my_property_normal v
		WHERE f_leak('passwd') AND f_leak(passwd)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "v",
                  },
                  "inh": true,
                  "location": 14,
                  "relname": "my_property_normal",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "BoolExpr": {
                "args": [
                  {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 50,
                            "sval": {
                              "sval": "passwd",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "f_leak",
                          },
                        },
                      ],
                      "location": 43,
                    },
                  },
                  {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "passwd",
                                },
                              },
                            ],
                            "location": 71,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "f_leak",
                          },
                        },
                      ],
                      "location": 64,
                    },
                  },
                ],
                "boolop": "AND_EXPR",
                "location": 60,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_views.sql > line 107 1`] = `
[
  "SELECT * FROM my_property_secure v
		WHERE f_leak('passwd') AND f_leak(passwd)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "v",
                  },
                  "inh": true,
                  "location": 14,
                  "relname": "my_property_secure",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "BoolExpr": {
                "args": [
                  {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 50,
                            "sval": {
                              "sval": "passwd",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "f_leak",
                          },
                        },
                      ],
                      "location": 43,
                    },
                  },
                  {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "passwd",
                                },
                              },
                            ],
                            "location": 71,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "f_leak",
                          },
                        },
                      ],
                      "location": 64,
                    },
                  },
                ],
                "boolop": "AND_EXPR",
                "location": 60,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_views.sql > line 117 1`] = `
[
  "SELECT * FROM my_credit_card_normal WHERE f_leak(cnum)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "my_credit_card_normal",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "FuncCall": {
                "args": [
                  {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "cnum",
                          },
                        },
                      ],
                      "location": 49,
                    },
                  },
                ],
                "funcformat": "COERCE_EXPLICIT_CALL",
                "funcname": [
                  {
                    "String": {
                      "sval": "f_leak",
                    },
                  },
                ],
                "location": 42,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_views.sql > line 120 1`] = `
[
  "SELECT * FROM my_credit_card_secure WHERE f_leak(cnum)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "my_credit_card_secure",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "FuncCall": {
                "args": [
                  {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "cnum",
                          },
                        },
                      ],
                      "location": 49,
                    },
                  },
                ],
                "funcformat": "COERCE_EXPLICIT_CALL",
                "funcname": [
                  {
                    "String": {
                      "sval": "f_leak",
                    },
                  },
                ],
                "location": 42,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_views.sql > line 128 1`] = `
[
  "SELECT * FROM my_credit_card_usage_normal
       WHERE f_leak(cnum) AND ymd >= '2011-10-01' AND ymd < '2011-11-01'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "my_credit_card_usage_normal",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "BoolExpr": {
                "args": [
                  {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "cnum",
                                },
                              },
                            ],
                            "location": 62,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "f_leak",
                          },
                        },
                      ],
                      "location": 55,
                    },
                  },
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "ymd",
                              },
                            },
                          ],
                          "location": 72,
                        },
                      },
                      "location": 76,
                      "name": [
                        {
                          "String": {
                            "sval": ">=",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "location": 79,
                          "sval": {
                            "sval": "2011-10-01",
                          },
                        },
                      },
                    },
                  },
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "ymd",
                              },
                            },
                          ],
                          "location": 96,
                        },
                      },
                      "location": 100,
                      "name": [
                        {
                          "String": {
                            "sval": "<",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "location": 102,
                          "sval": {
                            "sval": "2011-11-01",
                          },
                        },
                      },
                    },
                  },
                ],
                "boolop": "AND_EXPR",
                "location": 68,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_views.sql > line 133 1`] = `
[
  "SELECT * FROM my_credit_card_usage_secure
       WHERE f_leak(cnum) AND ymd >= '2011-10-01' AND ymd < '2011-11-01'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "my_credit_card_usage_secure",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "BoolExpr": {
                "args": [
                  {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "cnum",
                                },
                              },
                            ],
                            "location": 62,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "f_leak",
                          },
                        },
                      ],
                      "location": 55,
                    },
                  },
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "ymd",
                              },
                            },
                          ],
                          "location": 72,
                        },
                      },
                      "location": 76,
                      "name": [
                        {
                          "String": {
                            "sval": ">=",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "location": 79,
                          "sval": {
                            "sval": "2011-10-01",
                          },
                        },
                      },
                    },
                  },
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "ymd",
                              },
                            },
                          ],
                          "location": 96,
                        },
                      },
                      "location": 100,
                      "name": [
                        {
                          "String": {
                            "sval": "<",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "location": 102,
                          "sval": {
                            "sval": "2011-11-01",
                          },
                        },
                      },
                    },
                  },
                ],
                "boolop": "AND_EXPR",
                "location": 68,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_views.sql > line 142 1`] = `
[
  "PREPARE p1 AS SELECT * FROM my_property_normal WHERE f_leak(passwd)",
  {
    "stmts": [
      {
        "stmt": {
          "PrepareStmt": {
            "name": "p1",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 28,
                      "relname": "my_property_normal",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 21,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 21,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "FuncCall": {
                    "args": [
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "passwd",
                              },
                            },
                          ],
                          "location": 60,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "f_leak",
                        },
                      },
                    ],
                    "location": 53,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_views.sql > line 150 1`] = `
[
  "		-- To be perform as a view with security-barrier
EXECUTE p2",
  {
    "stmts": [
      {
        "stmt": {
          "ExecuteStmt": {
            "name": "p2",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_views.sql > line 151 1`] = `
[
  "		-- To be perform as a view without security-barrier

-- Cleanup.
RESET SESSION AUTHORIZATION",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "kind": "VAR_RESET",
            "name": "session_authorization",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
